[project]
name = "python-packaging-at"
authors = [{name = "Adam Tyson", email= "code@adamltyson.com"}]
description = "Example of how to package Python projects"
readme = "README.md"
requires-python = ">=3.8.0"
dynamic = ["version"]

license = {text = "BSD-3-Clause"}
dependencies = ["numpy", "pandas"]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",


]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project.optional-dependencies]
dev = [
    "pytest",
     "setuptools_scm",
    "flake8",
    "black",
    "pre-commit",
]

[tool.black]
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = false
line-length = 79
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | _build
    | build
    | dist
  )/
)
'''

